# zk-cred-longfellow

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: extend.rs  field.rs  longfellow_one_field.rs  mdoc_zk.rs  ntt.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: circuit.rs  mdoc_zk_proof.rs
js/: error.js
src/: circuit.rs  ffi_api.rs  js_api.rs  lib.rs  mdoc_zk.rs  test_vector.rs  transcript.rs  witness.rs  zk_one_circuit.rs
src/constraints/: constraints.rs  mod.rs  proof_constraints.rs  symbolic.rs
src/fields/: README.md  codegen.sh  codegen_addchain.sh  codegen_fiat_crypto.sh  extend_p.rs  fieldp256_2.rs  find_addition_chains.sh  mod.rs  ntt.rs  quadratic_extension.rs
src/fields/addition_chains/: gf_2_128_m2.rs  mod.rs  p128m2.rs  p256_scalar_m2.rs  p256m2.rs  p521m2.acc  p521m2.rs  template.txt
src/fields/field2_128/: backend_aarch64.rs  backend_bit_slicing.rs  backend_naive_loop.rs  backend_wasm_simd.rs  backend_x86.rs  constants.rs  constants.sage  extend.rs  extend_constants.rs  mod.rs
src/fields/fieldp128/: mod.rs  ops.rs
src/fields/fieldp256/: mod.rs  ops.rs
src/fields/fieldp256_scalar/: mod.rs  ops.rs
src/fields/fieldp521/: mod.rs
src/ligero/: committer.rs  merkle.rs  mod.rs  prover.rs  tableau.rs  verifier.rs
src/mdoc_zk/: bit_plucker.rs  circuit_interface.md  ec.rs  layout.rs  mod.rs  prover.rs  sha256.rs  verifier.rs
src/mdoc_zk/mdoc/: cose.rs  mod.rs
src/sumcheck/: bind.rs  constraints.rs  mod.rs  prover.rs  sparse.rs  symbolic.rs  witness.rs
src/sumcheck/bind/: mod.rs  sparse.rs  test_vector.rs
src/sumcheck/constraints/: mod.rs
src/zk_one_circuit/: prover.rs  verifier.rs
test-vectors/: README.md
test-vectors/bind/: dense_1d_array_bind_Field2_128.json  dense_1d_array_bind_FieldP128.json  dense_1d_array_bind_FieldP256.json  sparse_2d_array_bind_Field2_128.json  sparse_2d_array_bind_FieldP128.json  sparse_2d_array_bind_FieldP256.json  sparse_3d_array_bind_Field2_128.json  sparse_3d_array_bind_FieldP128.json  sparse_3d_array_bind_FieldP256.json
test-vectors/circuit/: longfellow-rfc-1-87474f308020535e57a778a82394a14106f8be5b.json
test-vectors/mdoc_zk/: params.json  witness_test_vector.json
test-vectors/one-circuit/: longfellow-mac-circuit-0dc911e13963f506df8928c6ba3ab4f5af017b36-1.json  longfellow-mac-circuit-0dc911e13963f506df8928c6ba3ab4f5af017b36-1.ligero-proof  longfellow-mac-circuit-0dc911e13963f506df8928c6ba3ab4f5af017b36-1.sumcheck-proof  longfellow-mac-circuit-66aeaf09a9cc98e36873e868307ac07279d5f7e0-1.json
test-vectors/one-circuit/mac-securerng/: longfellow-mac-circuit-0dc911e13963f506df8928c6ba3ab4f5af017b36-1.json  longfellow-mac-circuit-0dc911e13963f506df8928c6ba3ab4f5af017b36-1.ligero-proof  longfellow-mac-circuit-0dc911e13963f506df8928c6ba3ab4f5af017b36-1.sumcheck-proof
xtask/: Cargo.toml
xtask/assets/: index.html  main.js  worker.js
xtask/src/: main.rs
