[package]
name = "zk-cred-longfellow"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1"
byteorder = "1.5.0"
crypto-common = "0.1.6"
educe = { version = "0.6.0", features = ["Debug", "Clone", "Copy", "Hash", "Default"] }
getrandom = { version = "0.3.3", features = ["wasm_js"] }
hex = { version = "0.4.3" }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.10.9"
subtle = "2.6.1"
zstd = "0.13.3"

[lib]
crate-type = ["cdylib", "rlib"]
