[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8"
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive"] }
mime = "0.3"
tokio = { version = "1.49", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
webbrowser = "1"
